<resources>
    <string name="app_name">Jaljal</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="kakao_app_key">348275a3aa355c8c370f46636e488d3d</string>
    <string name="kakao_scheme">kakao348275a3aa355c8c370f46636e488d3d</string>
    <string name="kakaostory_host">kakaostory</string>

    <string name="facebook_app_id">135586723702300</string>
    <string name="fb_login_protocol_scheme">fb135586723702300</string>

    <string name="network_not_connect">네트워크 연결을 확인해주시길 바랍니다.</string>
    <string name="network_error">네트워크 오류가 발생하였습니다.</string>

    <string name="week_recipe">이주의 레시피</string>
    <string name="recipe_calandar">레시피 캘린더</string>
    <string name="recipe_book">레시피 북</string>

    <string name="jaljal_msg">잘잘 메시지</string>
    <string name="jaljal_vision">jajal비전</string>
    <string name="faq">고객지원</string>
    <string name="jaljal_coupon">잘잘 무료체험</string>

    <string name="setting">설정</string>
    <string name="logout">로그아웃</string>


    <string name="login">로그인</string>
    <string name="one_more_backbutton">\'뒤로\'버튼을 한번 더 누르시면 종료됩니다.</string>

    <string name="add_premium_ingr">프리미엄 재료 추가됨</string>
    <string name="delivery_premium_ingr">프리미엄재료가 함께 배송됩니다.</string>

    <string name="next_delivery">다음 배송일은 %s입니다.</string>
    <string name="do_change">변경하기</string>

    <string name="contact_us">1대1 문의하기</string>
    <string name="cancel">취소</string>


    <string name="under_find_pass"><u>비밀번호 찾기</u></string>
    <string name="under_signup"><u>회원가입</u></string>

    <string name="amount">용량: %s</string>
    <string name="price">가격: %s</string>

    <string name="payment_price">%s 결제금액</string>

    <string name="cook_tag"><![CDATA[<!--td {border: 1px solid #ccc;}br {mso-data-placement:same-cell;}-->]]></string>

    <string name="agree_txt">제휴신청/1:1 문의\n\n

    회원님의 소중한 개인정보는 다음과 같은 정책에 따라 수집 및 이용됩니다. 더잘잘(이하 회사)에서는 해당 목적에 연관되는 개인정보만을 수집하며, 수집된 정보를 투명하고 안전하게 보호 관리할 것을 약속합니다. 이에 개인정보 수집 및 이용에 대한 동의를 구합니다.\n\n

    1. 개인정보의 수집 및 이용 목적\n
    • 회원님의 서비스에 대한 문의에 보다 정확한 답변을 드리기 위해 수집됩니다.\n\n

    2. 수집항목\n
    • 필수항목: 성명, 전화번호, 이메일.\n\n

    3. 개인정보 보유 및 이용기간\n
    정보주체의 개인정보는 원칙적으로 개인정보의 수집 및 이용목적이 달성되고,\n
    거래 중지 시 지체없이 파기합니다. 단, 아래의 이유로 명시한 기간 동안 보존합니다.\n
    • 보유 사유 : 고객 문의사항에 대한 확인 및 대응\n
    • 보유 기간 : 고객 문의사항에 대한 처리 완료시점까지\n\n

    4. 동의를 거부할 권리 및 동의를 거부할 경우의 이익\n
    위 개인 정보(필수적 정보)의 수집 및 이용에 관한 동의는 회사와 고객 간의 원활한 소통과 신속한 서비스, 채용을 위해 필수적이므로, 위 사항에 동의하셔야만 이용이 가능합니다.\n
    선택적 정보의 수집은 발생하지 않습니다.
    </string>


    <string name="coupon_description"><![CDATA[<font color="#389e7a">%d</font>장의 초대장을 보유하고 있습니다.<br/>잘잘을 아직 체험해 보지 못한 친구 또는 가족에게<br/>무료 체험권을 보내 보세요.]]></string>


    <string name="vision_txt1">이 질문이 잘잘의 모든 고민의 시작이었습니다.\n잘잘이 생각하는 좋은 음식이란,\n모두가 즐길 수 있는 맛있고, 건강한 음식입니다.</string>
    <string name="vision_txt2">바르게 키운 식재료를 구하고, 이를 신선하게 고객에게 전달하고,\n 고객이 더 맛있게 요리할 수 있는 레시피를 개발하는 일,\n그래서 이 모든과정을 더 많은 사람들이 즐기고\n모두가 더 건강해지는 사회를 만드는일, 잘잘이 꼭 하고 싶고,\n잘 할 수 있는 일입니다. 이 건강한 변화를 위해 잘잘은\n다음과 같이 노력하고 있습니다.</string>
    <string name="vision_txt3">식재료를 대하는 잘잘의 기준은 까다롭습니다. 잘잘은 좋은 식재료를 사용할 때 음식이 더 건겅해지고, 더 맛있어진다는 사실을 누구보다 잘 알고 있습니다. 최고의 주재료, 부재료, 그리고 맛재료를 고객에게 전달하기 위해 잘잘만의 엄선된 공급망 관리 시스템을 확립했습니다.</string>
    <string name="vision_txt4">건강하고 신선한 재료로 더 맛있는 음식을 만들기 위해, 잘잘은 다양한 레시피를 개발하고 있습니다. 새로운 식재료를 사용해보고 알아가는 과정을 통해 요리하는 재미는 더 커지고, 이는 결국 우리의 건강한 식습관으로 이어질 것입니다. 잘잘과 함께면, 모든 요리가 새롭고 특별해 집니다.</string>
    <string name="vision_txt5">잘잘은 농수축산업의 좋은 품종을 바르게 키우는 원산지 농가와 직접 파트너십을 맺습니다. 소비자에게 신선한 재료를 더 합리적인 가격에 전달하고, 고집과 양심으로 대한민국의 식재료를 생산하는 농가가 지속가능한 발전을 할 수 있도록 최선을 다하겠습니다.</string>
    <string name="vision_txt6">고객의 건강, 음식의 맛, 농가의 지속가능한 발전을 넘어, 잘잘은 환경까지 생각 합니다. 잘잘이 직접 개발한 레시피에 따른 정량 재료와 잘잘만의 검수, 배송 시스템을 통해 음식물 쓰레기 배출을 최소화 합니다. 모두가 더 잘사는 세상을 위해 잘잘이 노력하고 있습니다.</string>

    <string name="recycle_txt1">좋은 식재료와\n맛있는 레시피 개발을 위한 고민,\n그리고 잘잘은 환경까지 생각 합니다.\n잘잘의 모든 패키지는 재활용이 가능하며\n앞으로도 지속적으로 친환경적인 상품과\n패키징 개발을 위해\n노력과 시간을 아끼지 않겠습니다</string>
    <string name="recycle_txt2">잘잘의 친환경 종이상자는 수분에 강하고 강도가 우수해 가정에서 재사용하기에도 좋습니다. 다 쓰신 후에는 측면을 절개하여 부피를 줄인 후 종이 재활용 분리수거함에 넣어주세요.</string>
    <string name="recycle_txt3">충격 완화와 보냉 효과를 가지고 있는 잘잘 보냉팩은 100% PE(폴리에틸렌) 소재로 만들어져 있습니다.플라스틱 재활용 분리수거함에 넣어주세요.</string>
    <string name="recycle_txt4">신선한 재료가 들어 있는 식자재 용기들 중 플라스틱 용기는 PET( 페트), 지퍼백은 PE(폴리에틸렌) 소재로 만들어져 있습니다.플라스틱 재활용 분리수거함에 넣어주세요.</string>
    <string name="recycle_txt5">완전히 녹은 아이스젤의 측면을 절개하여 내용물을 4L 이상 담을 수 있는 용기에 옮겨 담습니다.그리고 굵은 소금을 젤 위에 뿌리면 15분 후 액체상태로 변하게 됩니다. 액체 상태의 내용물은 화장실 변기에 버리고,아이스젤 PE(폴리에틸렌)포장지는 플라스틱 재활용 분리수거함에 넣어주세요.</string>
    <string name="recycle_txt6">맛있는 음식을 환경을 헤치지 않으며 먹을 수 있도록 하는 것 잘잘이 추구하는 방향입니다.오늘도 더 나은 세상을 위해 노력해 주셔서 고맙습니다.</string>
</resources>
