<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff">


    <android.support.v4.view.ViewPager
        android:id="@+id/vp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="20dp">


        <TextView
            android:id="@+id/tab_tv0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/week_recipe"
            android:textColor="@color/app_jingray"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/tab_tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/recipe_calandar"
            android:textColor="@color/app_gray2"
            android:textSize="16dp" />


        <TextView
            android:id="@+id/tab_tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/recipe_book"
            android:textColor="@color/app_gray2"
            android:textSize="16dp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />


        <ImageView
            android:id="@+id/menu_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/kakaotalk_icon" />

    </LinearLayout>


</FrameLayout>