<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_orange">

    <LinearLayout
        android:id="@+id/menu_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/close_iv"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="24dp"
            android:onClick="menuClick"
            android:padding="10dp"
            android:src="@drawable/btn_down" />


        <TextView
            android:id="@+id/menu_tv0"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:gravity="center_vertical"
            android:onClick="menuClick"
            android:tag="0"
            android:text="@string/week_recipe"
            android:textColor="@color/menu_text_color"
            android:textSize="23dp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/menu_tv1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:gravity="center_vertical"
            android:onClick="menuClick"
            android:tag="1"
            android:text="@string/recipe_calandar"
            android:textColor="@color/menu_text_color"
            android:textSize="23dp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/menu_tv2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:gravity="center_vertical"
            android:onClick="menuClick"
            android:tag="2"
            android:text="@string/recipe_book"
            android:textColor="@color/menu_text_color"
            android:textSize="23dp"
            android:textStyle="italic" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="#ffffff" />

        <TextView
            android:id="@+id/menu_tv3"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:gravity="center_vertical"
            android:onClick="menuClick"
            android:tag="3"
            android:text="@string/jaljal_msg"
            android:textColor="@color/menu_text_color"
            android:textSize="23dp"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/menu_tv9"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="20dp"
                android:gravity="center_vertical"
                android:onClick="menuClick"
                android:tag="9"
                android:text="@string/jaljal_coupon"
                android:textColor="@color/menu_text_color"
                android:textSize="23dp"
                android:textStyle="italic" />


            <TextView
                android:id="@+id/coupon_tv"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:background="@drawable/coupon_oval"
                android:gravity="center"
                android:text="0"
                android:textColor="#ffffff"
                android:textSize="15dp"
                android:textStyle="italic" />

        </LinearLayout>


        <TextView
            android:id="@+id/menu_tv4"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:gravity="center_vertical"
            android:onClick="menuClick"
            android:tag="4"
            android:text="잘잘 비전"
            android:textColor="@color/menu_text_color"
            android:textSize="23dp"
            android:textStyle="italic" />


        <TextView
            android:id="@+id/menu_tv8"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:gravity="center_vertical"
            android:onClick="menuClick"
            android:tag="8"
            android:text="리사이클"
            android:textColor="@color/menu_text_color"
            android:textSize="23dp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/menu_tv5"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:gravity="center_vertical"
            android:onClick="menuClick"
            android:tag="5"
            android:text="@string/faq"
            android:textColor="@color/menu_text_color"
            android:textSize="23dp"
            android:textStyle="italic" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="#ffffff" />

        <TextView
            android:id="@+id/menu_tv6"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:gravity="center_vertical"
            android:onClick="menuClick"
            android:tag="6"
            android:text="@string/setting"
            android:textColor="@color/menu_text_color"
            android:textSize="23dp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/menu_tv7"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:gravity="center_vertical"
            android:onClick="menuClick"
            android:tag="7"
            android:text="@string/logout"
            android:textColor="@color/menu_text_color"
            android:textSize="23dp"
            android:textStyle="italic" />

    </LinearLayout>
</ScrollView>