<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <include
        layout="@layout/include_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <LinearLayout
        android:id="@+id/sub_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/include_titlebar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <ScrollView
            android:id="@+id/sv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            android:background="#ffffff">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/img_vision_main"
                    android:gravity="bottom"
                    android:orientation="vertical"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="24dp"
                        android:gravity="center"
                        android:text="좋은 음식은 무엇일까?"
                        android:textColor="#ffffff"
                        android:textSize="14dp"
                        android:textStyle="normal" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="40dp"
                        android:gravity="center"
                        android:text="@string/vision_txt1"
                        android:textColor="#ffffff"
                        android:textSize="14dp"
                        android:textStyle="normal" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="40dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="32dp"
                    android:gravity="center"
                    android:text="@string/vision_txt2"
                    android:textColor="@color/app_jingray"
                    android:textSize="12dp"
                    android:textStyle="normal" />


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_vision_00" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="24dp"
                    android:text="엄격한 재료 관리"
                    android:textColor="@color/app_jingray"
                    android:textSize="14dp"
                    android:textStyle="italic" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="32dp"
                    android:text="@string/vision_txt3"
                    android:textColor="@color/app_jingray"
                    android:textSize="12dp"
                    android:textStyle="normal" />


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_vision_01" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="24dp"
                    android:text="다양한 레시피 개발"
                    android:textColor="@color/app_jingray"
                    android:textSize="14dp"
                    android:textStyle="italic" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="32dp"
                    android:text="@string/vision_txt4"
                    android:textColor="@color/app_jingray"
                    android:textSize="12dp"
                    android:textStyle="normal" />



                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_vision_02" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="24dp"
                    android:text="중간 유통 마진 제거"
                    android:textColor="@color/app_jingray"
                    android:textSize="14dp"
                    android:textStyle="italic" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="32dp"
                    android:text="@string/vision_txt5"
                    android:textColor="@color/app_jingray"
                    android:textSize="12dp"
                    android:textStyle="normal" />



                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_vision_03" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="24dp"
                    android:text="친환경 시스템 구현"
                    android:textColor="@color/app_jingray"
                    android:textSize="14dp"
                    android:textStyle="italic" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="32dp"
                    android:text="@string/vision_txt6"
                    android:textColor="@color/app_jingray"
                    android:textSize="12dp"
                    android:textStyle="normal" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</FrameLayout>
