<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:paddingLeft="32dp"
    android:paddingRight="32dp">


    <ImageView
        android:id="@+id/logo_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="64dp"
        android:src="@drawable/img_logo"
        android:visibility="visible"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>

    <TextView
        android:id="@+id/email_subject_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="이메일"
        android:textColor="@color/app_gray3"
        android:textSize="12dp"
        android:visibility="invisible"/>




    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:id="@+id/email_ll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:visibility="gone">

            <EditText
                android:id="@+id/email_et"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@null"
                android:hint="email@email.com"
                android:inputType="textEmailAddress"
                android:textColor="@color/app_gray3"
                android:textSize="@dimen/login_txt_size" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/app_gray3" />
        </LinearLayout>

        <TextView
            android:id="@+id/email_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:onClick="onClick"
            android:text="이메일"
            android:textColor="@color/app_gray3"
            android:textSize="@dimen/login_txt_size" />

    </RelativeLayout>

    <TextView
        android:id="@+id/pass_subject_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="비밀번호"
        android:textColor="@color/app_gray3"
        android:textSize="12dp"
        android:visibility="invisible"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:id="@+id/pass_ll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:visibility="gone">

            <EditText
                android:id="@+id/pass_et"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@null"
                android:hint="··············"
                android:inputType="textPassword"
                android:textColor="@color/app_gray3"
                android:textSize="@dimen/login_txt_size" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/app_gray3" />
        </LinearLayout>

        <TextView
            android:id="@+id/pass_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:onClick="onClick"
            android:text="비밀번호"
            android:fontFamily="@font/noto_bold"
            android:textColor="@color/app_gray3"
            android:textSize="@dimen/login_txt_size" />
    </RelativeLayout>

    <Button
        android:id="@+id/login_bt"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/login_box"
        android:gravity="center"
        android:text="@string/login"
        android:onClick="onClick"
        android:fontFamily="@font/notosanskr_medium"
        android:textColor="#ffffff"
        android:textSize="18dp" />


    <View
        android:id="@+id/keybord_margin_v"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="40dp"
        android:text="SNS 계정으로 로그인"
        android:textColor="@color/app_gray3"
        android:textSize="@dimen/login_txt_size" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/sns_bt1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="onClick"
            android:background="@drawable/btn_sns_naver" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/sns_bt2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="onClick"
            android:background="@drawable/btn_sns_fb" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/sns_bt3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="onClick"
            android:background="@drawable/btn_sns_kakao" />


        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/sns_bt4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="onClick"
            android:background="@drawable/btn_sns_insta" />

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="40dp">

        <TextView
            android:id="@+id/findpw_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/under_find_pass"
            android:textColor="@drawable/pressed_signup"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/signup_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/under_signup"
            android:textColor="@drawable/pressed_signup"
            android:textSize="14dp" />
    </RelativeLayout>


</LinearLayout>